Notifications, dof, gender

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=reddo-box
-DB_USERNAME=postgres
-DB_PASSWORD=1234
+DB_PORT=22
+DB_DATABASE=aa
+DB_USERNAME=aa
+DB_PASSWORD=aa
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
